--- a/7lalak/ar.lproj/7lalak-Info.plist
+++ b/7lalak/ar.lproj/7lalak-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.7lalak.app</string>
+	<string>com.7lalak.app.-lalak</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
