--- a/7lalakTests/hlalekTests-Info.plist
+++ b/7lalakTests/hlalekTests-Info.plist
@@ -24,6 +24,8 @@
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>Main_iPhone</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
