--- a/7lalakTests/hlalekTests-Info.plist
+++ b/7lalakTests/hlalekTests-Info.plist
@@ -6,6 +6,33 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>logo58x58</string>
+				<string>logo80x80</string>
+				<string>logo120x120</string>
+			</array>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>logo58x58</string>
+				<string>Icon</string>
+				<string>logo80x80</string>
+				<string>logo40x40</string>
+				<string>logo152x152</string>
+				<string>logo76x76</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.7lalek.hlalek</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -25,7 +52,7 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
-	<string>Main_iPhone</string>
+	<string>Main_ipad</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
